Added config widgets and a few more jvm settings